# ppexchanger

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: config.rs  events.rs  identity.rs  lib.rs  main.rs  peerdb.rs  protocol.rs
src/crypto/: mod.rs
src/net/: discovery.rs  file_xfer.rs  handshake.rs  listener.rs  mod.rs  peer.rs  scan.rs  session.rs
src/tui/: art.rs  config.rs  discovery_popup.rs  file_offer_popup.rs  help.rs  input.rs  mod.rs  settings_popup.rs  theme.rs
tests/: discovery.rs  handshake_roundtrip.rs  session_roundtrip.rs
